--- a/azure-pipelines-1.yml
+++ b/azure-pipelines-1.yml
@@ -27,4 +27,9 @@ steps:
     Contents: '**/*.war'
     TargetFolder: '$(build.artifactstagingdirectory)'
     
+- task: PublishBuildArtifacts@1
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'warFile'
+    publishLocation: 'Container'
 
